# QLayoutBasedMainWindow

./: .gitignore  CMakeLists.txt  README.md
include/Dialogs/: LayoutSavingDialog.h
include/Windows/: QLayoutMainWindow.h
src/Dialogs/: LayoutSavingDialog.cpp
src/Windows/: QLayoutMainWindow.cpp
ui/: layout_saving_dialog.ui
